src/home_page/navigator/navigator_styles.scss
@import "../../styles/global.scss";

.navigator {
  position: absolute;
  right: 0px;
  top: 0px;
  width: 128px;
  height: 100%;
  display: flex;  
  flex-direction: column;
  justify-content: center;
  align-items: center;  
  gap: 32px; 

  @include breakpoint(tablet) {
    flex-direction: row;
    right: auto;
    left: 0px;
    top: auto;
    bottom: 0px;
    width: 100%;
    height: 80px;    
    background-color: var(--surface-color);
  }

  @include breakpoint(mobile) {
    height: 64px;
  }

  .active {
    background-color: var(--accent-color);
  }
}

